--- a/snaplet-sqlite-simple.cabal
+++ b/snaplet-sqlite-simple.cabal
@@ -47,6 +47,7 @@ Library
     Paths_snaplet_sqlite_simple
 
   build-depends:
+    aeson                      >= 0.6     && < 0.7,
     base                       >= 4       && < 5,
     bytestring                 >= 0.9.1   && < 0.11,
     clientsession              >= 0.8     && < 0.9,
